Better use of Optional